--- a/library-system-ui/src/App.css
+++ b/library-system-ui/src/App.css
@@ -31,7 +31,7 @@
 
 .welcome-text {
   flex: 1;
-  padding: 20px; 
+  padding: 20px; /* Adjust as needed */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,23 +40,60 @@
 
 .library-image {
   flex: 1;
-  overflow: hidden;
+  overflow: hidden; /* In case the image is too tall */
 }
 
 .library-image img {
   height: 100%;
   width: auto;
-  object-fit: cover;
+  object-fit: cover; /* This will cover the div without stretching the image */
 }
 
 .block {
   display: flex;
-  justify-content: center; /* Horizontal centering */
-  align-items: center; /* Vertical centering */
-  height: 10vh;
-  background-color: #15182e/* Example background color */
+  justify-content: center; 
+  align-items: center;
+  height: 15vh;
+  background-color: #15182e;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
+
 .footer-content {
   align-items: center;
   color: aliceblue;
+}
+
+.navbar {
+  display: flex;
+  height: 10vh;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #15182e;
+  color: white;
+  padding: 10px;
+}
+
+.nav-items a {
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.search-bar input {
+  padding: 5px;
+}
+
+.search-bar button {
+  padding: 5px;
+}
+
+.user-account {
+  padding: 10px;
+}
+
+.main-content h1 {
+  color: #333;
 }
