--- a/library-system-ui/src/Movie.css
+++ b/library-system-ui/src/Movie.css
@@ -39,7 +39,7 @@
 
 .filter-header {
     position: relative;
-    left: 0px;
+    left: 5px;
     right: 5px;
     width: 80px;
     height: 30px;
@@ -50,6 +50,7 @@
     line-height: 24px;
     color: #33717E;
     border-bottom: 1px solid #e2e8f0; 
+    text-align: left;
 }
   
 .filter-option {
@@ -66,6 +67,10 @@
     z-index: 5;
     position: relative;
     font-size: 15px;
+    text-decoration: none;
+    text-align: left;
+    left: 5px;
+    width: 170px; 
 }
 
 .filter-option a .chevron {
