Adding the styling and added functionality to the filter

--- a/library-system-ui/src/Books.css
+++ b/library-system-ui/src/Books.css
@@ -18,3 +18,16 @@
     flex: 1;
     padding: 40px;
 }
+
+.availability-drpdw{
+    padding: 5px;
+}
+
+.author-drpdw{
+    padding: 5px;
+}
+
+.genre-drpdw{
+    padding: 5px;
+}
+
