--- a/library-system-ui/src/Movie.css
+++ b/library-system-ui/src/Movie.css
@@ -29,9 +29,9 @@
 
 
 .filter-sidebar {
-    width: 20vw; /* Adjust as necessary */
-    height: 70vh; /* Adjust based on header height */
-    border-right: 1px solid #ddd; /* Add a border to separate from the content */
+    width: 20vw; 
+    height: 70vh; 
+    border-right: 1px solid #ddd; 
     padding: 20px;
     z-index: 5;
     position: relative;
@@ -121,26 +121,26 @@
 }
 
 .add-to-cart-btn {
-    background-color: #000; /* Tailwind background color: bg-black */
-    color: #fff; /* Tailwind text color: text-white */
-    padding: 0.75rem 1.5rem; /* Tailwind padding: py-3 px-6 */
-    border: none; /* Tailwind border: border-none */
-    border-radius: 0.375rem; /* Tailwind border radius: rounded-md */
-    cursor: pointer; /* Tailwind cursor: cursor-pointer */
-    margin-top: 1rem; /* Tailwind margin: mt-4 */
+    background-color: #000; 
+    color: #fff; 
+    padding: 0.75rem 1.5rem; 
+    border: none; 
+    border-radius: 0.375rem;
+    cursor: pointer; 
+    margin-top: 1rem; 
 }
   
 .movie-list {
     flex: 1;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Creates a responsive grid */
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); 
     grid-gap: 20px;
-    align-items: start; /* Align the grid items to the start */
+    align-items: start; 
 }
   
 .movie-item {
-    background-color: #fff; /* Placeholder color */
+    background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
