--- a/library-system-ui/src/Movie.css
+++ b/library-system-ui/src/Movie.css
@@ -1,8 +1,9 @@
-.movie-page-container {
+.movie-page-container li {
     position: relative; 
     width: 100%; 
     height: 1093px;
-    overflow: hidden; 
+    overflow: hidden;
+    list-style-type: none;
   }
   
 .rectangle-left {
@@ -139,30 +140,3 @@
     align-items: start; 
 }
   
-.movie-item {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-}
-  
-.movie-item img {
-    width: 100%;
-    display: block;
-    object-fit: cover; 
-}
-
-.movie-info {
-    padding: 0.5rem; 
-    text-align: left; 
-}
-
-.movie-info h5 {
-    margin: 0;
-    color: #333; 
-}
-  
-.movie-info p {
-    margin: 0;
-    color: #666; 
-}
