Fixed styling and filters working for Genre

--- a/library-system-ui/src/Books.css
+++ b/library-system-ui/src/Books.css
@@ -59,7 +59,7 @@
     padding-right: 30px; 
   }
 
-  .books-container h2 {
+  .books-title {
     font-size: 2rem; 
     text-decoration: underline; 
     color: #000000; 
