--- a/library-system-ui/src/App.css
+++ b/library-system-ui/src/App.css
@@ -80,7 +80,6 @@
   color: white;
   padding: 10px;
   text-decoration: none;
-  margin-right: 20px;
 }
 
 .search-bar input {
@@ -92,7 +91,7 @@
 }
 
 .user-account {
-  margin-right: 10px;
+  padding: 10px;
 }
 
 .main-content h1 {
@@ -105,3 +104,4 @@
   margin: 0;
   filter: brightness(0) invert(1);
 }
+
