--- a/library-system-ui/src/Cart.css
+++ b/library-system-ui/src/Cart.css
@@ -75,7 +75,49 @@
   .checkout-button {
     background-color: #131528; 
     color: white; 
-    margin-top: 10px; 
+    margin-top: 10px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-size:12pt;
+  }
+
+.checkout-success {
+    text-align: center;
+    padding: 20px;
+    background-color: #1e1326; 
+    color: #f6f4f7; 
+    border-radius: 5px;
+    margin: 20px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+  }
+  
+  .home-button {
+    background-color: #e5e6f0; 
+    color: rgb(38, 33, 33);
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: 'Raleway';
+    font-style: normal;
+  }
+  
+  .home-button:hover {
+    background-color: #a98cd7;
+  }
+  
+  .cart-summary{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 20px;
+    line-height: 30px;
   }
   
   
