--- a/library-system-ui/src/Periodicals.css
+++ b/library-system-ui/src/Periodicals.css
@@ -26,6 +26,10 @@ main-container {
   width: 98%; /* Make button width fill the container */
   min-height: 40px;
   text-align: left;
+  text-align: left;
+  font-family: 'Raleway';
+  font-weight: 900;
+
 }
 
 /* You may also want to add styles for hover, focus, and active states */
@@ -35,6 +39,7 @@ main-container {
 .type-drpdw .dropdown-toggle:focus {
   background-color: #a4a4e2 !important;
   box-sizing: border-box;
+
 }
   
   /* Ensure this selector is more specific or add !important to override default styles if necessary */
@@ -57,6 +62,7 @@ main-container {
     height: calc(100vh - 20px); /* Match filter container height */
     overflow-y: auto; /* Scrollable container for books */
     padding: 20px;
+    padding-bottom: 25vh;
   }
   
   .periodical-list {
@@ -81,8 +87,6 @@ main-container {
   }
   
 
-
-  
   @media (max-width: 768px) {
     .main-container {
       flex-direction: column;
